fix: alignment of service history when no todo

--- a/src/app/_components/override-sdk/widget/todo/todo.component.scss
+++ b/src/app/_components/override-sdk/widget/todo/todo.component.scss
@@ -130,3 +130,7 @@
   margin-top: 0.5rem;
   // padding-top: 1.5rem;
 }
+
+.mb-3 {
+  margin-bottom: 3em;
+}
